--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,24 +1,21 @@
-#name: run unit tests
+name: run unit tests
 
-#on: [push, pull_request]
+on: [push, pull_request]
 
-#jobs:
-#  build:
+jobs:
+  build:
 
-#    runs-on: ubuntu-latest
-#    env:
-#      config: 'Release'
+    runs-on: ubuntu-latest
+    env:
+      config: 'Release'
 
-#    steps:
-#    - uses: actions/checkout@v2
-#    - name: Setup .NET Core 3.1
-#      uses: actions/setup-dotnet@v1
-#      with:
-#        dotnet-version: 3.1.301
-#    - name: Setup .NET5
-#      uses: actions/setup-dotnet@v1
-#      with:
-#        dotnet-version: 5.0.100
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup .NET6
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '6.0.x'
+        include-prerelease: true
 #    - name: Install dependencies
 #      run: dotnet restore --verbosity normal
 #    - name: Build
