--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+# Compressed files
+*.br
+*.gzip
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
