--- a/CompressedStaticFiles.Example/Properties/launchSettings.json
+++ b/CompressedStaticFiles.Example/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "CompressedStaticAssets.Example": {
+    "CompressedStaticFiles.Example": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
