--- a/CompressedStaticFiles.AspNetCore.Tests/CompressedStaticFiles.AspNetCore.Tests.csproj
+++ b/CompressedStaticFiles.AspNetCore.Tests/CompressedStaticFiles.AspNetCore.Tests.csproj
@@ -29,7 +29,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\CompressedStaticFiles.Blazor\CompressedStaticFiles.Blazor.csproj" />
+		<ProjectReference Include="..\CompressedStaticFiles.AspNetCore\CompressedStaticFiles.AspNetCore.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
