--- a/.github/workflows/GithubActionsRelease.yml
+++ b/.github/workflows/GithubActionsRelease.yml
@@ -19,8 +19,8 @@ env:
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
   outputCSFB: ${{github.workspace}}\siteCSFB
-  projectCSFB: 'CompressedStaticFiles.Blazor/CompressedStaticFiles.Blazor.csproj'
-  projectTest: 'CompressedStaticFiles.Blazor.Test/CompressedStaticFiles.Blazor.Test.csproj'
+  projectCSFB: 'CompressedStaticFiles.AspNetCore/CompressedStaticFiles.AspNetCore.csproj'
+  projectTest: 'CompressedStaticFiles.AspNetCore.Test/CompressedStaticFiles.AspNetCore.Test.csproj'
  
 jobs:
 
@@ -30,15 +30,15 @@ jobs:
   is-on-fork:
     name: Running on a fork?
     runs-on: ubuntu-latest
-    if: github.repository != 'Material-Blazor/CompressedStaticFiles.Blazor'
+    if: github.repository != 'Material-Blazor/CompressedStaticFiles.AspNetCore'
     steps:
     - name: Nothing to see here
       run: echo ""
 
   is-on-material-blazor:
-    name: Running on Material-Blazor/CompressedStaticFiles.Blazor?
+    name: Running on Material-Blazor/CompressedStaticFiles.AspNetCore?
     runs-on: ubuntu-latest
-    if: github.repository == 'Material-Blazor/CompressedStaticFiles.Blazor'
+    if: github.repository == 'Material-Blazor/CompressedStaticFiles.AspNetCore'
     steps:
     - name: Nothing to see here
       run: echo ""
@@ -130,13 +130,13 @@ jobs:
         dotnet-version: '6.0.x'
         include-prerelease: true
 
-    - name: Build CompressedStaticFiles.Blazor 🔧
+    - name: Build CompressedStaticFiles.AspNetCore 🔧
       run: dotnet build ${{env.projectCSFB}} --configuration ${{env.buildConfiguration}} -p:Version=${{needs.version.outputs.identifier}}
 
     - name: Generate the NuGet package 🔧
       run: dotnet pack ${{env.projectCSFB}} --no-build --configuration ${{env.buildConfiguration}} --output ${{env.outputCSFB}} -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg -p:Version=${{needs.version.outputs.identifier}}
 
-    - name: Display CompressedStaticFiles.Blazor package output Ꙫ
+    - name: Display CompressedStaticFiles.AspNetCore package output Ꙫ
       run: dir ${{env.outputCSFB}}
 
     - name: Upload Package 🚀
