--- a/.github/workflows/GithubActionsWIP.yml
+++ b/.github/workflows/GithubActionsWIP.yml
@@ -11,8 +11,8 @@ env:
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
   outputCSFB: ${{github.workspace}}/siteCSFB
-  projectCSFB: 'CompressedStaticFiles.Blazor/CompressedStaticFiles.Blazor.csproj'
-  projectTest: 'CompressedStaticFiles.Blazor.Test/CompressedStaticFiles.Blazor.Test.csproj'
+  projectCSFB: 'CompressedStaticFiles.AspNetCore/CompressedStaticFiles.AspNetCore.csproj'
+  projectTest: 'CompressedStaticFiles.AspNetCore.Test/CompressedStaticFiles.AspNetCore.Test.csproj'
 
 jobs:
 
@@ -22,15 +22,15 @@ jobs:
   is-on-fork:
     name: Running on a fork?
     runs-on: ubuntu-latest
-    if: github.repository != 'Material-Blazor/CompressedStaticFiles.Blazor'
+    if: github.repository != 'Material-Blazor/CompressedStaticFiles.AspNetCore'
     steps:
     - name: Nothing to see here
       run: echo ""
 
   is-on-material-blazor:
-    name: Running on Material-Blazor/CompressedStaticFiles.Blazor?
+    name: Running on Material-Blazor/CompressedStaticFiles.AspNetCore?
     runs-on: ubuntu-latest
-    if: github.repository == 'Material-Blazor/CompressedStaticFiles.Blazor'
+    if: github.repository == 'Material-Blazor/CompressedStaticFiles.AspNetCore'
     steps:
     - name: Nothing to see here
       run: echo ""
@@ -165,11 +165,11 @@ jobs:
         include-prerelease: true
       if: github.event_name != 'workflow_dispatch'
 
-    - name: Build CompressedStaticFiles.Blazor 🔧
+    - name: Build CompressedStaticFiles.AspNetCore 🔧
       run: dotnet build ${{env.projectCSFB}} --configuration ${{env.buildConfiguration}} --version-suffix ${{needs.version.outputs.suffix}}
 
     - name: Generate the NuGet package 🔧
       run: dotnet pack ${{env.projectCSFB}} --no-build --configuration ${{env.buildConfiguration}} --output ${{env.outputCSFB}} -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg --version-suffix ${{needs.version.outputs.suffix}}
 
-    - name: Display CompressedStaticFiles.Blazor package output Ꙫ
+    - name: Display CompressedStaticFiles.AspNetCore package output Ꙫ
       run: dir ${{env.outputCSFB}}
