--- a/.github/workflows/GithubActionsWIP.yml
+++ b/.github/workflows/GithubActionsWIP.yml
@@ -2,10 +2,12 @@
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - 'main'
 
   pull_request:
-    branches: [ main ]
+    branches:
+      - 'main'
 
 env:
   buildPlatform: 'Any CPU'
