--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,9 +9,14 @@ updates:
   - package-ecosystem: github-actions
     directory: "/"
     schedule:
-      interval: monthly  
+      interval: "daily"  
+
 
   - package-ecosystem: "nuget"
     directory: "/"
     schedule:
-      interval: monthly
+      interval: "daily"
+    ignore:
+      - dependency-name: "Microsoft.*"
+        versions: ["7.x"]
+
