--- a/CompressedStaticFiles.AspNet.Tests/CompressedStaticFiles.AspNet.Tests.csproj
+++ b/CompressedStaticFiles.AspNet.Tests/CompressedStaticFiles.AspNet.Tests.csproj
@@ -29,7 +29,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\CompressedStaticFiles.AspNetCore\CompressedStaticFiles.AspNetCore.csproj" />
+		<ProjectReference Include="..\CompressedStaticFiles.AspNetCore\CompressedStaticFiles.AspNet.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
