--- a/CompressedStaticFiles.AspNet/CompressedStaticFiles.AspNet.csproj
+++ b/CompressedStaticFiles.AspNet/CompressedStaticFiles.AspNet.csproj
@@ -3,8 +3,8 @@
 	<PropertyGroup>
 		<TargetFrameworks>net6.0;</TargetFrameworks>
 		<Version>1.0.0</Version>
-		<Authors>Peter Andersson;Andrey Kudashkin;Mathias Raacke,Arian Kadkhoda</Authors>
-		<Company>Peter Andersson;Andrey Kudashkin;Mathias Raacke,Arian Kadkhoda</Company>
+		<Authors>Simon Ziegler;Mark Stega;Peter Andersson;Andrey Kudashkin;Mathias Raacke,Arian Kadkhoda</Authors>
+		<Company>Simon Ziegler;Mark Stega;Peter Andersson;Andrey Kudashkin;Mathias Raacke,Arian Kadkhoda</Company>
 		<Description>
 			Send compressed static files to the browser without having to compress on demand, also has support for sending more advanced image formats when the browser indicates that i has support for it.
 			Files need to be compressed and converted to other image formats before deploying.
