--- a/.github/workflows/GithubActionsWIP.yml
+++ b/.github/workflows/GithubActionsWIP.yml
@@ -100,12 +100,8 @@ jobs:
     steps:
     - id: get
       run: |
-        echo "::set-output name=suffix::ci.$(date +'%Y-%m-%d--%H%M')"
-    - id: show
-      run: |
-        echo "${{ steps.get.outputs.suffix }}"
-    outputs:
-      suffix: ${{ steps.get.outputs.suffix }}
+        echo "ci.$(date +'%Y-%m-%d--%H%M')"
+        echo "{suffix}::ci.$(date +'%Y-%m-%d--%H%M')" >> $GITHUB_OUTPUT
       
       
 ############################################################################################################
@@ -168,10 +164,10 @@ jobs:
       if: github.event_name != 'workflow_dispatch'
 
     - name: Build CompressedStaticFiles.AspNetCore 🔧
-      run: dotnet build ${{env.projectCSFB}} --configuration ${{env.buildConfiguration}} --version-suffix ${{needs.version.outputs.suffix}}
+      run: dotnet build ${{env.projectCSFB}} --configuration ${{env.buildConfiguration}} --version-suffix ${suffix}
 
     - name: Generate the NuGet package 🔧
-      run: dotnet pack ${{env.projectCSFB}} --no-build --configuration ${{env.buildConfiguration}} --output ${{env.outputCSFB}} -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg --version-suffix ${{needs.version.outputs.suffix}}
+      run: dotnet pack ${{env.projectCSFB}} --no-build --configuration ${{env.buildConfiguration}} --output ${{env.outputCSFB}} -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg --version-suffix ${suffix}
 
     - name: Display CompressedStaticFiles.AspNetCore package output Ꙫ
       run: dir ${{env.outputCSFB}}
