--- a/.github/workflows/GithubActionsRelease.yml
+++ b/.github/workflows/GithubActionsRelease.yml
@@ -87,7 +87,7 @@ jobs:
     steps:
     - id: get
       run: |
-        echo "{version}=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_OUTPUT
+        echo "{version}=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
 ############################################################################################################
 # Store the branch information
 ############################################################################################################
@@ -97,7 +97,7 @@ jobs:
     steps:
     - id: get
       run: |
-        echo "{branch}=${GITHUB_REF/refs\/heads\//}" >> $GITHUB_OUTPUT
+        echo "{branch}=${GITHUB_REF/refs\/heads\//}" >> $GITHUB_ENV
 
 ############################################################################################################
 # Build package and deploy
@@ -121,10 +121,10 @@ jobs:
         include-prerelease: true
 
     - name: Build CompressedStaticFiles.AspNetCore 🔧
-      run: dotnet build ${{env.projectCSFB}} --configuration ${{env.buildConfiguration}} -p:Version=${{needs.version.outputs.identifier}}
+      run: dotnet build ${{env.projectCSFB}} --configuration ${{env.buildConfiguration}} -p:Version=${{env.version}}
 
     - name: Generate the NuGet package 🔧
-      run: dotnet pack ${{env.projectCSFB}} --no-build --configuration ${{env.buildConfiguration}} --output ${{env.outputCSFB}} -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg -p:Version=${{needs.version.outputs.identifier}}
+      run: dotnet pack ${{env.projectCSFB}} --no-build --configuration ${{env.buildConfiguration}} --output ${{env.outputCSFB}} -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg -p:Version=${{env.version}}
 
     - name: Display CompressedStaticFiles.AspNetCore package output Ꙫ
       run: dir ${{env.outputCSFB}}
