--- a/.github/workflows/GithubActionsRelease.yml
+++ b/.github/workflows/GithubActionsRelease.yml
@@ -87,7 +87,7 @@ jobs:
     steps:
     - id: get
       run: |
-        echo "{version}=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
+        echo "version=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
 ############################################################################################################
 # Store the branch information
 ############################################################################################################
