--- a/.github/workflows/GithubActionsWIP.yml
+++ b/.github/workflows/GithubActionsWIP.yml
@@ -99,6 +99,7 @@ jobs:
 
     steps:
     - id: get
+      shell: bash
       run: |
         echo "ci.$(date +'%Y-%m-%d--%H%M')"
         echo "ciSuffix2::ci.$(date +'%Y-%m-%d--%H%M')" >> $GITHUB_ENV
