--- a/.github/workflows/GithubActionsWIP.yml
+++ b/.github/workflows/GithubActionsWIP.yml
@@ -47,55 +47,45 @@ jobs:
     steps:
 
     - name: DotNet info
-      run: dotnet --info
-      if: github.event_name != 'workflow_dispatch'
 
     - name: Set ciSuffix as env variable
       run: echo "ciSuffix=ci.$(date +'%Y-%m-%d--%H%M')" >> $GITHUB_ENV
       shell: bash
-      if: github.event_name != 'workflow_dispatch'
 
     - name: Echo ciSuffix
       run: echo "CI suffix is $ciSuffix"
       shell: bash
-      if: github.event_name != 'workflow_dispatch'
 
     - name: Get the branch
       id: get_branch
       run: echo ::set-output name=branch::${GITHUB_REF/refs\/heads\//}
       shell: bash
-      if: github.event_name != 'workflow_dispatch'
 
     - name: Get the pullrequest
       id: get_pullrequest
       run: echo ::set-output name=pullrequest::${GITHUB_REF/refs\/pull\//}
       shell: bash
-      if: github.event_name != 'workflow_dispatch'
 
     - name: Get the tag
       id: get_tag
       run: echo ::set-output name=tag::${GITHUB_REF/refs\/tags\//}
       shell: bash
-      if: github.event_name != 'workflow_dispatch'
 
     - name: Show branch name Ꙫ
       run: echo GitHub indicates that this is a branch push request of ${{steps.get_branch.outputs.branch}}
-      if: github.event_name != 'workflow_dispatch' && contains(github.ref, 'refs/heads')
 
     - name: Show PR name Ꙫ
       run: echo GitHub indicates that this is a pull request called ${{steps.get_pullrequest.outputs.pullrequest}}
-      if: github.event_name != 'workflow_dispatch' && contains(github.ref, 'refs/pull')
 
     - name: Show Tag name Ꙫ
       run: echo GitHub indicates that this is a tag creation with ${{steps.get_tag.outputs.tag}}
-      if: github.event_name != 'workflow_dispatch' && contains(github.ref, 'refs/tag')
 
 ############################################################################################################
 # Store the version information
 ############################################################################################################
   version:
     name: Set version suffix
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - id: get
@@ -107,7 +97,6 @@ jobs:
       
 ############################################################################################################
 # Run the test project. Should this fail, the deploy step (job deployghpages) is skipped
-# This is soft-skipped when we only want to perform a comparison (github.event_name != 'workflow_dispatch')
 ############################################################################################################
   test:
     name: Run .NET tests
@@ -142,14 +131,12 @@ jobs:
       
 ############################################################################################################
 # Build nuget package
-# This is hard-skipped when we only want to perform a comparison (github.event_name != 'workflow_dispatch')
 ############################################################################################################
   build-package:
     name: Build nuget package
     needs: [info, test, version]
 
     runs-on: windows-latest
-    if: github.event_name != 'workflow_dispatch'
 
     steps:
     - name: Checkout repository under $GITHUB_WORKSPACE so the job can access it 🛎️
@@ -162,7 +149,6 @@ jobs:
       with:
         dotnet-version: '6.0.x'
         include-prerelease: true
-      if: github.event_name != 'workflow_dispatch'
 
     - name: Build CompressedStaticFiles.AspNetCore 🔧
       run: dotnet build ${{env.projectCSFB}} --configuration ${{env.buildConfiguration}} --version-suffix ${env.ciSuffix}
