--- a/.github/workflows/GithubActionsWIP.yml
+++ b/.github/workflows/GithubActionsWIP.yml
@@ -14,94 +14,14 @@ env:
   buildConfiguration: 'Release'
   outputCSFB: ${{github.workspace}}/siteCSFB
   projectCSFB: 'CompressedStaticFiles.AspNet/CompressedStaticFiles.AspNet.csproj'
-  projectTest: 'CompressedStaticFiles.AspNet.Test/CompressedStaticFiles.AspNet.Test.csproj'
 
 jobs:
 
-############################################################################################################
-# These jobs are used to gate actions. By creating these jobs we don't need to proliferate the repo checks
-############################################################################################################
-  is-on-fork:
-    name: Running on a fork?
-    runs-on: ubuntu-latest
-    if: github.repository != 'Material-Blazor/CompressedStaticFiles.AspNet'
-    steps:
-    - name: Nothing to see here
-      run: echo ""
-
-  is-on-material-blazor:
-    name: Running on Material-Blazor/CompressedStaticFiles.AspNet?
-    runs-on: ubuntu-latest
-    if: github.repository == 'Material-Blazor/CompressedStaticFiles.AspNet'
-    steps:
-    - name: Nothing to see here
-      run: echo ""
-
-############################################################################################################
-# This job is only to display some CI information
-############################################################################################################
-  info:
-    name: Display CI information
-    runs-on: windows-latest
-
-    steps:
-
-    - name: DotNet info
-      run: dotnet --info
-
-    - name: Set ciSuffix as env variable
-      run: echo "ciSuffix=ci.$(date +'%Y-%m-%d--%H%M')" >> $GITHUB_ENV
-      shell: bash
-
-    - name: Echo ciSuffix
-      run: echo "CI suffix is $ciSuffix"
-      shell: bash
-
-    - name: Get the branch
-      id: get_branch
-      run: echo ::set-output name=branch::${GITHUB_REF/refs\/heads\//}
-      shell: bash
-
-    - name: Get the pullrequest
-      id: get_pullrequest
-      run: echo ::set-output name=pullrequest::${GITHUB_REF/refs\/pull\//}
-      shell: bash
-
-    - name: Get the tag
-      id: get_tag
-      run: echo ::set-output name=tag::${GITHUB_REF/refs\/tags\//}
-      shell: bash
-
-    - name: Show branch name Ꙫ
-      run: echo GitHub indicates that this is a branch push request of ${{steps.get_branch.outputs.branch}}
-
-    - name: Show PR name Ꙫ
-      run: echo GitHub indicates that this is a pull request called ${{steps.get_pullrequest.outputs.pullrequest}}
-
-    - name: Show Tag name Ꙫ
-      run: echo GitHub indicates that this is a tag creation with ${{steps.get_tag.outputs.tag}}
-
-############################################################################################################
-# Store the version information
-############################################################################################################
-  version:
-    name: Set version suffix
-    runs-on: windows-latest
-
-    steps:
-    - id: get
-      shell: bash
-      run: |
-        echo "ci.$(date +'%Y-%m-%d--%H%M')"
-        echo "ciSuffix2=ci.$(date +'%Y-%m-%d--%H%M')" >> $GITHUB_ENV
-      
-      
 ############################################################################################################
 # Build nuget package
 ############################################################################################################
   build-package:
     name: Build nuget package
-    needs: [info, version]
 
     runs-on: windows-latest
 
@@ -125,7 +45,7 @@ jobs:
       run: dotnet build ${{env.projectCSFB}} --configuration ${{env.buildConfiguration}} --version-suffix ${{env.ciSuffix}}
 
     - name: Generate the NuGet package 🔧
-      run: dotnet pack ${{env.projectCSFB}} --no-build --configuration ${{env.buildConfiguration}} --output ${{env.outputCSFB}} -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg --version-suffix ${{env.ciSuffix}}
+      run: dotnet pack ${{env.projectCSFB}} --no-build --configuration ${{env.buildConfiguration}} --output ${{env.outputCSFB}} -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg --Version ${{env.ciSuffix}}
 
     - name: Display CompressedStaticFiles.AspNetCore package output Ꙫ
       run: dir ${{env.outputCSFB}}
