--- a/.github/workflows/GithubActionsRelease.yml
+++ b/.github/workflows/GithubActionsRelease.yml
@@ -85,13 +85,14 @@ jobs:
     name: Create release
     needs: [build-and-deploy-package, is-on-material-blazor]
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - name: Get the version
-        echo "version=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
+      run: echo "version=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
+      shell: bash
 
-    - name: Create Release
+    - name: Create release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
