--- a/.github/workflows/GithubActionsRelease.yml
+++ b/.github/workflows/GithubActionsRelease.yml
@@ -59,7 +59,7 @@ jobs:
     - name: Use prelease dotnet
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: '6.0.x'
+        dotnet-version: '7.0.x'
         include-prerelease: true
 
     - name: Get the version
@@ -92,12 +92,8 @@ jobs:
       run: echo "version=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
       shell: bash
 
-    - name: Create release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Create Release
+      uses: ncipollo/release-action@v1
       with:
-        tag_name: ${{env.version}}
-        release_name: Release ${{env.version}}
-        draft: false
-        prerelease: false
+        name: Release ${{env.version}}
+        tag:  ${{env.version}}
