--- a/.github/workflows/GithubActionsRelease.yml
+++ b/.github/workflows/GithubActionsRelease.yml
@@ -1,4 +1,4 @@
-﻿name: GithubActionsRelease
+name: GithubActionsRelease
 
 ############################################################################################################
 # All of thes jobs runs commands only on a tag push in the Material-Blazor\Material.Blazor repository
